# ve.direct_pico

./: README.md
project/: CMakeLists.txt  leds.hpp  main.cpp  uart_rx.pio
